--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "@babel/preset-react": "^7.14.5",
     "babel-loader": "^8.2.3",
     "html-webpack-plugin": "^5.4.0",
+    "style-loader": "^3.3.1",
     "webpack": "^5.59.1",
     "webpack-cli": "^4.9.1",
     "webpack-dev-server": "^4.3.1"
@@ -24,6 +25,8 @@
   "dependencies": {
     "css-loader": "^6.5.0",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-copy-to-clipboard": "^5.0.4",
+    "react-dom": "^17.0.2",
+    "react-router-dom": "^6.0.2"
   }
 }
